cabal-version:      2.4
name:               tcp-hs
version:            0.1.0.0
synopsis:           Implementing TCP in Haskell?
description:        Implementing TCP in Haskell?
author:             Mikey Hoy
maintainer:         mjh@mjhoy.com

executable tcp-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    c-sources:        app/test.c
    default-language: Haskell2010
